--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,75 @@
+@font-face {
+    font-family: norse-bold;
+    src: url(fonts/Norse-Bold.otf);
+}
+
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.contenedor {
+    display: flex;
+}
+
+header {
+    width: 33%;
+    min-height: 100vh;
+    background: url(images/halie-west-UWni0vqQotc-unsplash.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+
+header .titulo {
+    max-height: 20%;
+    margin-top: 30vh;
+    background-color: #00000080;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 40px;
+    font-family: norse-bold, sans-serif;
+    padding: 1.5em;
+    gap: 0.3em;
+
+}
+
+header .titulo img {
+    height: 2.5em;
+    width: auto;
+}
+
+main {
+    width: 67%;
+    background-color: #fff;
+    margin: 5em
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.secciones {
+    display: flex;
+    justify-content: flex-start;
+    gap: 7.5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -23,7 +94,7 @@
     color: #fff;
     margin-top: 30%;
     width: 100%;
-    height: 15%;   
+    height: 10vw;   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,14 +104,13 @@
 
 .titulo .logo,
 img {
-    height: 100%;
+    height: 7.5vw;
 }
 
 .titulo .texto {
-    font-size: 50px;
+    font-size: 5vw;
     font-family: "Acme", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
-
-
+ */
