--- a/styles.css
+++ b/styles.css
@@ -44,26 +44,104 @@ header .titulo img {
 main {
     width: 67%;
     background-color: #fff;
-    margin: 5em
+    font-family: Inter,Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin-top: 2em;
 }
 
 form {
     display: flex;
     flex-direction: column;
+    margin: 2em;
+    padding-bottom: 1.3em;
 }
 
 .secciones {
     display: flex;
     justify-content: flex-start;
-    gap: 7.5em;
+    gap: 4em;
+    background-color: #fff;
+}
+
+.contenedor-formulario {
+    box-shadow: 0px 0px 20px #00000080;
+}
+
+p {
+    margin: 30px;
+    line-height: 1.3em;
+}
+
+p,
+legend {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+legend {
+    margin: 1em 0 0.5em;
+}
+
+label {
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: #555050;
+}
+
+input {
+    height: 1.7em;
+    width: 20em;
+    border-radius: 0.25em;
+    border: 1px solid #55505080;
+    padding: 0.5em;
+    box-shadow: 0px 0px 2.5px #00000080;
+    margin: 0.1em 0 0;
+    color: #000000ff;
+}
+
+input:focus,
+input:focus-within {
+    outline: none;
+}
+
+input:valid {
+    border: 2px solid #3f8ada
+}
+
+input:invalid {
+    border: 2px solid #ed0000;
 }
 
 
+.error {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-weight: normal;
+    color: #ed0000
+}
 
 
+button {
+    margin-top: 1em;
+    padding: 0.7em 2.5em;
+    border-radius: 0.7em;
+    border: none;
+    background-color: #ff7700;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 0px 0px 10px #00000080;
+}
 
+.ya-registrado {
+    font-weight: normal;
+    font-size: 16px;
+}
 
-
+a {
+    text-decoration: none;
+    color: #ff7700;
+    font-weight: 550;
+}
 
 
 
