--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ header .titulo img {
 }
 
 main {
-    width: 67%;
+    width: fit-content;
     background-color: #fff;
     font-family: Inter,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin-top: 2em;
@@ -53,6 +53,7 @@ form {
     flex-direction: column;
     margin: 2em;
     padding-bottom: 1.3em;
+    
 }
 
 .secciones {
@@ -103,22 +104,43 @@ input:focus-within {
     outline: none;
 }
 
-input:valid {
+input:valid,
+#confirm.valido {
     border: 2px solid #3f8ada
 }
 
-input:invalid {
+input:invalid,
+#confirm.invalido {
     border: 2px solid #ed0000;
 }
 
 
-.error {
+input:invalid + .error {
     margin: 0;
     padding: 0;
     font-size: 12px;
     font-weight: normal;
     color: #ed0000
 }
+
+input:valid + .error {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-weight: normal;
+    color: #ed0000;
+    opacity: 0;
+}
+
+.confirm {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-weight: normal;
+    color: #ed0000
+}
+
+
 
 
 button {
